@@ -1,6 +1,6 @@
 Package: simplejags
-Version: 0.01-3
-Date: 2014-4-17
+Version: 0.01-4
+Date: 2014-5-1
 Title: Run JAGS from R (a wrapper for rjags)
 Author: Ken Kellner <ken@kenkellner.com>
 Maintainer: Ken Kellner <ken@kenkellner.com>
