@@ -2,12 +2,16 @@ importFrom(methods, "setOldClass")
 
 importFrom(rjags, "jags.model", "coda.samples")
 
+importFrom(coda, "traceplot")
+
 #import(parallel)
 
 exportClasses("simplejags")
 
-export("simplejags", "print.simplejags", "process.output", "traceplots", "postPredCheck",
-       "whiskerplot", "get.dim", "process.input")
+exportMethods("traceplot")
+
+export("simplejags", "print.simplejags", "process.output", "postPredCheck",
+       "whiskerplot", "get.dim", "process.input", "traceplot")
 
 S3method("plot", "simplejags")
 S3method("xyplot", "simplejags")
